20.03.2012:
        - PixmapButton (red LEDs, and Delta Mode): Eat up right-clicks. (Tim)
19.03.2012:
        - added customizable columns to the arranger (cherry-pick from trunk) (flo93)
        - added song-position toolbar (cherry-pick from trunk) (flo93)
        - added tempo- and sig-toolbar (cherry-pick from trunk) (flo93)
        - moved redundant toolbar generation (undo etc) from the various
          topwins into TopWin (cherry-pick from trunk) (flo93)
        - Song load: Arranger MDI window: Fixed size restoration. (Tim)
          In TopWin::readStatus(), if mdisubwin is maximized, restore it before setting pos and height.
        - Changed reporting of bad timing a bit to possibly make it clearer what the problem is 
          and what to do about it (rj)
18.03.2012:
        - Delta/absolute mode button: Improved behaviour. (Tim)
        - Transport and NoteInfo toolbar positional editors: Fixed not updating when tempo or sig changed. (Tim)
          In PosEdit::setValue(), checking different value is not enough. Must check whether resultant msf or mbt values changed.
          TODO: updateValue() is now public so it can be called externally but it is not used yet - make NoteInfo and Transport 
           use it instead of setValue().  
16.03.2012:
        - Drum editor:  Added missing multiple-note editing. (Tim...)
        - Midi editors: Don't allow notes to be added before part. (Caused crash in Drum editor, odd behaviour in Pianoroll.)
        - Midi editors: Added "Delta Mode" button to Note Info toolbar. 
        - Code cleanups in Pianoroll, Drum editor.
15.03.2012:
        - Updated swedish translation with help from Cristian Ramos (rj)
10.03.2012:
        - Track routing: Fixed duplicate routes: Reverted usage of operation group in Song::addTrack. (Tim)
        - Templates: Default routing: Restored default Jack out/in routes in audio.med, synti.med, default.med, monorecord.med. (Tim)