@@ -43,9 +43,7 @@ class Header : public QHeaderView {
    public:
       Header(QWidget* parent=0, const char* name=0);
       void writeStatus(int level, MusECore::Xml&) const;
-      QString getStatus() const;
       void readStatus(MusECore::Xml&);
-      void setStatus(QString status);
       void setColumnLabel( const QString & s, int col, int width = -1 );
       void setToolTip(int col, const QString &text);
       void setWhatsThis(int col, const QString &text);
